--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
     "require": {
         "php": "^8.1",
         "barryvdh/laravel-dompdf": "^2.2",
+        "endroid/qr-code": "^5.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "midtrans/midtrans-php": "^2.5",
-        "simplesoftwareio/simple-qrcode": "^4.2"
+        "midtrans/midtrans-php": "^2.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
